--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$6R6eOYkhs3FkdsxG.KQU3eNUHRHyme74NjIDG8jE5gicgTLzdZ9w2"
+# 	- password: java.lang.String = "$2a$05$6H8LML2Ofq2/vodzzVVrz.mayCqHlGxcRXBMtPZKMryX80OHgTlYm"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$fjEKEuxlPO8.i1VaO/Li/u5AuRblxonvFqfbRBQRBmKfO.XNoMMgS"
+# 	- password: java.lang.String = "$2a$05$O0Kg8tY9VsQFnc2yNORIsO2.Pugmew3CUf7snosT749Sywm8uHDGG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -124,4 +124,52 @@ announcement03=8
 # 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
+
+challenge01=9
+
+# acme.entities.challenges.Challenge{id=9, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 9
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Challenge 01"
+# 	- deadline: java.util.Date = <<Sun Jun 10 19:10:00 CEST 2029>>
+# 	- rewardGold: acme.framework.datatypes.Money = <<€ 1000.00>>
+# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 750.00>>
+# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 500.00>>
+
+challenge02=10
+
+# acme.entities.challenges.Challenge{id=10, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 10
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Challenge 02"
+# 	- deadline: java.util.Date = <<Thu Jun 10 19:10:00 CEST 2021>>
+# 	- rewardGold: acme.framework.datatypes.Money = <<€ 2000.00>>
+# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 1500.00>>
+# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 1000.00>>
+
+challenge03=11
+
+# acme.entities.challenges.Challenge{id=11, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 11
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Challenge 03"
+# 	- deadline: java.util.Date = <<Tue Jun 10 19:10:00 CEST 2025>>
+# 	- rewardGold: acme.framework.datatypes.Money = <<€ 500.00>>
+# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 250.00>>
+# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 100.00>>
 
