--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$YYOGDsqKPVGzgjWyu/zwmOd6bexueF.PpgTAr.C8WAC8ctYVAqPjy"
+# 	- password: java.lang.String = "$2a$05$e9iRNS8cu6TKM2YybX/b5.7uWfYLx/v0O9HepNnpf0UMg5TGPmVhq"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$XllXxPyx7/mjtP8AJ4nokeHiFFM/043/fGQNyJZLYGOMh.iOpsyUO"
+# 	- password: java.lang.String = "$2a$05$fmlj85YHqVj0qHz9jnxOquHWFW6UAuOZyIqY3BUrgjvSCaPM57rVe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -162,4 +162,17 @@ offer02=10
 # 	- minMoney: acme.framework.datatypes.Money = <<€ 50.00>>
 # 	- ticker: java.lang.String = "OFGHI-67891"
 # 	- rango: java.lang.String = null
+
+customisationParameter01=11
+
+# acme.entities.customisationParameters.CustomisationParameter{id=11, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 11
+# 	- version: int = 0
+# 	from acme.entities.customisationParameters.CustomisationParameter:
+# 	- serialVersionUID: long = 1
+# 	- spamWords: java.lang.String = "sex"
+# 	- threshold: java.lang.Double = 1.0
 
