--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$6R6eOYkhs3FkdsxG.KQU3eNUHRHyme74NjIDG8jE5gicgTLzdZ9w2"
+# 	- password: java.lang.String = "$2a$05$jCBJ1otILqZC.P7LJs0sXu6Uxs9flD4DtoTrBTZM/w38TfCRrPgpa"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$fjEKEuxlPO8.i1VaO/Li/u5AuRblxonvFqfbRBQRBmKfO.XNoMMgS"
+# 	- password: java.lang.String = "$2a$05$MLgEYcHdI0oYLaubYppvYO3dbcCnT9OJjK70BMzHeQOJSQrkR3w1W"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -124,4 +124,49 @@ announcement03=8
 # 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
+
+invRecord01=9
+
+# acme.entities.investorRecords.InvestorRecord{id=9, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 9
+# 	- version: int = 0
+# 	from acme.entities.investorRecords.InvestorRecord:
+# 	- serialVersionUID: long = 1
+# 	- name: java.lang.String = "Ozimandias"
+# 	- sector: java.lang.String = "Construction"
+# 	- invStatement: java.lang.String = "Currently active"
+# 	- stars: java.lang.Integer = 4
+
+invRecord02=10
+
+# acme.entities.investorRecords.InvestorRecord{id=10, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 10
+# 	- version: int = 0
+# 	from acme.entities.investorRecords.InvestorRecord:
+# 	- serialVersionUID: long = 1
+# 	- name: java.lang.String = "Lord Ainz"
+# 	- sector: java.lang.String = "World Domination"
+# 	- invStatement: java.lang.String = "Currently really really active"
+# 	- stars: java.lang.Integer = 5
+
+invRecord03=11
+
+# acme.entities.investorRecords.InvestorRecord{id=11, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 11
+# 	- version: int = 0
+# 	from acme.entities.investorRecords.InvestorRecord:
+# 	- serialVersionUID: long = 1
+# 	- name: java.lang.String = "Prince Eugene"
+# 	- sector: java.lang.String = "Harbory"
+# 	- invStatement: java.lang.String = "First time investing"
+# 	- stars: java.lang.Integer = null
 
