--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,8 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$liDxPCaNoXvbnfcMb6H/JejrZhc6LmJ.fRpZpfo8/ikMDVBD8DTlS"
-# 	- password: java.lang.String = "$2a$05$YYOGDsqKPVGzgjWyu/zwmOd6bexueF.PpgTAr.C8WAC8ctYVAqPjy"
+# 	- password: java.lang.String = "$2a$05$YkT0gf.PkV7nSGVU9ZHeJ.mxsuU9D9jUUoA.CGkCR9lOahlLjIL2m"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -44,8 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$brF08uLsDLrxeWL74KFvjObhEdbsjNUEXmzQ99xgGZucjapkV0K4a"
-# 	- password: java.lang.String = "$2a$05$XllXxPyx7/mjtP8AJ4nokeHiFFM/043/fGQNyJZLYGOMh.iOpsyUO"
+# 	- password: java.lang.String = "$2a$05$92Kn1ahdUW.T405osflb/eEq2KKlQpxD8LbWIkNe3EBOgLnlFDPhq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -127,15 +125,9 @@ announcement03=8
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
 
-
 requests01=9
 
 # acme.entities.requestss.Requests{id=9, version=0}
-
-offer01=9
-
-# acme.entities.offers.Offer{id=9, version=0}
-
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
@@ -153,28 +145,11 @@ offer01=9
 requests02=10
 
 # acme.entities.requestss.Requests{id=10, version=0}
-
-# 	from acme.entities.offers.Offer:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = " Offer 1"
-# 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
-# 	- deadline: java.util.Date = <<Wed Jun 10 19:10:00 CEST 2026>>
-# 	- text: java.lang.String = "This is a offer's text"
-# 	- maxMoney: acme.framework.datatypes.Money = <<€ 800.00>>
-# 	- minMoney: acme.framework.datatypes.Money = <<€ 700.00>>
-# 	- ticker: java.lang.String = "OABCD-12345"
-# 	- rango: java.lang.String = null
-
-offer02=10
-
-# acme.entities.offers.Offer{id=10, version=0}
-
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 10
 # 	- version: int = 0
-
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 02"
@@ -201,6 +176,33 @@ requests03=11
 # 	- reward: acme.framework.datatypes.Money = <<€ 10000.00>>
 # 	- ticker: java.lang.String = "REBCD-62345"
 
+offer01=12
+
+# acme.entities.offers.Offer{id=12, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 12
+# 	- version: int = 0
+# 	from acme.entities.offers.Offer:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = " Offer 1"
+# 	- moment: java.util.Date = <<Sun Jun 10 19:10:00 CET 1900>>
+# 	- deadline: java.util.Date = <<Wed Jun 10 19:10:00 CEST 2026>>
+# 	- text: java.lang.String = "This is a offer's text"
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 800.00>>
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 700.00>>
+# 	- ticker: java.lang.String = "OABCD-12345"
+# 	- rango: java.lang.String = null
+
+offer02=13
+
+# acme.entities.offers.Offer{id=13, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 13
+# 	- version: int = 0
 # 	from acme.entities.offers.Offer:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = " Offer 2"
