--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,9 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$6H8LML2Ofq2/vodzzVVrz.mayCqHlGxcRXBMtPZKMryX80OHgTlYm"
-# 	- password: java.lang.String = "$2a$05$YkT0gf.PkV7nSGVU9ZHeJ.mxsuU9D9jUUoA.CGkCR9lOahlLjIL2m"
-
+# 	- password: java.lang.String = "$2a$05$p7cLI0SefDutw5gdUWiB3OR9SoSH0UIIerD8puBRrxleHNP8pRzF."
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -45,8 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$O0Kg8tY9VsQFnc2yNORIsO2.Pugmew3CUf7snosT749Sywm8uHDGG"
-# 	- password: java.lang.String = "$2a$05$92Kn1ahdUW.T405osflb/eEq2KKlQpxD8LbWIkNe3EBOgLnlFDPhq"
+# 	- password: java.lang.String = "$2a$05$6TH5wUWw3Rl4P24qvJTHouYw1qHNHdxBKHFvnVOOgKN3/Fkdvtssm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -128,30 +125,14 @@ announcement03=8
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
 
-
-# acme.entities.challenges.Challenge{id=9, version=0}
-
+requests01=9
 
 # acme.entities.requestss.Requests{id=9, version=0}
-
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 9
 # 	- version: int = 0
-
-# 	from acme.entities.challenges.Challenge:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Challenge 01"
-# 	- deadline: java.util.Date = <<Sun Jun 10 19:10:00 CEST 2029>>
-# 	- rewardGold: acme.framework.datatypes.Money = <<€ 1000.00>>
-# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 750.00>>
-# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 500.00>>
-
-challenge02=10
-
-# acme.entities.challenges.Challenge{id=10, version=0}
-
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 01"
@@ -164,24 +145,11 @@ challenge02=10
 requests02=10
 
 # acme.entities.requestss.Requests{id=10, version=0}
-
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 10
 # 	- version: int = 0
-
-# 	from acme.entities.challenges.Challenge:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Challenge 02"
-# 	- deadline: java.util.Date = <<Thu Jun 10 19:10:00 CEST 2021>>
-# 	- rewardGold: acme.framework.datatypes.Money = <<€ 2000.00>>
-# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 1500.00>>
-# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 1000.00>>
-
-challenge03=11
-
-# acme.entities.challenges.Challenge{id=11, version=0}
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 02"
@@ -199,13 +167,6 @@ requests03=11
 # 	- serialVersionUID: long = 1
 # 	- id: int = 11
 # 	- version: int = 0
-# 	from acme.entities.challenges.Challenge:
-# 	- serialVersionUID: long = 1
-# 	- title: java.lang.String = "Challenge 03"
-# 	- deadline: java.util.Date = <<Tue Jun 10 19:10:00 CEST 2025>>
-# 	- rewardGold: acme.framework.datatypes.Money = <<€ 500.00>>
-# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 250.00>>
-# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 100.00>>
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 03"
@@ -253,4 +214,54 @@ offer02=13
 # 	- ticker: java.lang.String = "OFGHI-67891"
 # 	- rango: java.lang.String = null
 
+challenge01=14
+
+# acme.entities.challenges.Challenge{id=14, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 14
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Challenge 01"
+# 	- description: java.lang.String = "Description 01"
+# 	- deadline: java.util.Date = <<Sun Jun 10 19:10:00 CEST 2029>>
+# 	- rewardGold: acme.framework.datatypes.Money = <<€ 1000.00>>
+# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 750.00>>
+# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 500.00>>
+
+challenge02=15
+
+# acme.entities.challenges.Challenge{id=15, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 15
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Challenge 02"
+# 	- description: java.lang.String = "Description 02"
+# 	- deadline: java.util.Date = <<Thu Jun 10 19:10:00 CEST 2021>>
+# 	- rewardGold: acme.framework.datatypes.Money = <<€ 2000.00>>
+# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 1500.00>>
+# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 1000.00>>
+
+challenge03=16
+
+# acme.entities.challenges.Challenge{id=16, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 16
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Challenge 03"
+# 	- description: java.lang.String = "Description 03"
+# 	- deadline: java.util.Date = <<Tue Jun 10 19:10:00 CEST 2025>>
+# 	- rewardGold: acme.framework.datatypes.Money = <<€ 500.00>>
+# 	- rewardSilver: acme.framework.datatypes.Money = <<€ 250.00>>
+# 	- rewardBronze: acme.framework.datatypes.Money = <<€ 100.00>>
 
