--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$s7OubW4i4AQVd1nIYsG5s.ebduykkUELaAQWx0OK5Cr.J6JQeYQs6"
+# 	- password: java.lang.String = "$2a$05$8mH0tiK2E3.PA.dAp9lYJOjeHcu/T3wMHJSzSFi039YUwMc4NepUu"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$HJqOYbqb/7/WpHudrs72ce/ioRnpVxcj8yzDzWtaqdNNI2BTVCYxK"
+# 	- password: java.lang.String = "$2a$05$j4rk/09uGSEuW.4pbDkr3.CoP6JbRQZ2IQpciMSeR6sAxNxgHwMES"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
