--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$6R6eOYkhs3FkdsxG.KQU3eNUHRHyme74NjIDG8jE5gicgTLzdZ9w2"
+# 	- password: java.lang.String = "$2a$05$LYfasEBJPUD3caK7HEvMsenxs.hZ6PK8UDecxmNLBL4hiLLmmYx1q"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$fjEKEuxlPO8.i1VaO/Li/u5AuRblxonvFqfbRBQRBmKfO.XNoMMgS"
+# 	- password: java.lang.String = "$2a$05$YdkpNx1flJiKGTr6uOmbYeq27.VIEB97KCHWiCYdMN9i4B03UDRIK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ announcement01=6
 # 	from acme.entities.announcements.Announcement:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Sample announcement 01"
-# 	- moment: java.util.Date = <<Mon Jun 10 10:35:00 CEST 2019>>
+# 	- moment: java.util.Date = <<Mon Nov 04 10:35:00 CET 2019>>
 # 	- moreInfo: java.lang.String = null
 # 	- text: java.lang.String = "This is the description of a sample announcement"
 
