--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,16 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-
-# 	- password: java.lang.String = "$2a$05$Ce/90mZmu.58lh1I13uWBOuNnzrtUxlV5WbprDur/5.EdplP3ndsy"
-
-# 	- password: java.lang.String = "$2a$05$LYfasEBJPUD3caK7HEvMsenxs.hZ6PK8UDecxmNLBL4hiLLmmYx1q"
-
-
-# 	- password: java.lang.String = "$2a$05$8mH0tiK2E3.PA.dAp9lYJOjeHcu/T3wMHJSzSFi039YUwMc4NepUu"
-
-# 	- password: java.lang.String = "$2a$05$KKbIjw9KWJn.tUb3q3GtguXplaQZchDc1Bjs.zIimXjn0YhMe/ttS"
-
+# 	- password: java.lang.String = "$2a$05$AzJMLHxbbl3l2rn4kF4rgebrFR0ew30lQlJ7ejiT8zuyxt2D4G5iK"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -52,17 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$y1QlatXmrb.X.op463vM..5HhVn0gHiDdCrc2li7rsjvLeRb4Aroe"
-
-
-# 	- password: java.lang.String = "$2a$05$YdkpNx1flJiKGTr6uOmbYeq27.VIEB97KCHWiCYdMN9i4B03UDRIK"
-
-
-# 	- password: java.lang.String = "$2a$05$j4rk/09uGSEuW.4pbDkr3.CoP6JbRQZ2IQpciMSeR6sAxNxgHwMES"
-
-# 	- password: java.lang.String = "$2a$05$3VB3xqP.WaS2MDSFHkjwn.J065nlmzmKayDGSb35xCdo9pWDyoteC"
-
-
+# 	- password: java.lang.String = "$2a$05$kcyki/Aw3IRwel2zLcACOenQ2o5f/1pdZw0VavpJNDXsIGZRAtIPa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -144,11 +125,6 @@ announcement03=8
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
 
-
-companyRecord01=9
-
-# acme.entities.companyRecords.CompanyRecord{id=9, version=0}
-
 requests01=9
 
 # acme.entities.requestss.Requests{id=9, version=0}
@@ -157,21 +133,6 @@ requests01=9
 # 	- serialVersionUID: long = 1
 # 	- id: int = 9
 # 	- version: int = 0
-# 	from acme.entities.companyRecords.CompanyRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Solutia"
-# 	- sector: java.lang.String = "Sector 1"
-# 	- ceo: java.lang.String = "CEO 1"
-# 	- description: java.lang.String = "Description 1"
-# 	- webSite: java.lang.String = "https://gruposolutia.com/"
-# 	- phone: java.lang.String = "(9557) 922051"
-# 	- email: java.lang.String = "romangutierrez@hotmail.com"
-# 	- isIncorporated: java.lang.Boolean = false
-# 	- numberStars: java.lang.Integer = 0
-
-companyRecord02=10
-
-# acme.entities.companyRecords.CompanyRecord{id=10, version=0}
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 01"
@@ -184,29 +145,11 @@ companyRecord02=10
 requests02=10
 
 # acme.entities.requestss.Requests{id=10, version=0}
-
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 10
 # 	- version: int = 0
-
-# 	from acme.entities.companyRecords.CompanyRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Alveys Chocolates"
-# 	- sector: java.lang.String = "Sector 2"
-# 	- ceo: java.lang.String = "CEO 2"
-# 	- description: java.lang.String = "Description 2"
-# 	- webSite: java.lang.String = "https://www.alveyschocolates.com/"
-# 	- phone: java.lang.String = "+34 (6035) 527401"
-# 	- email: java.lang.String = "antoniovidaldimision@gmail.com"
-# 	- isIncorporated: java.lang.Boolean = true
-# 	- numberStars: java.lang.Integer = 2
-
-companyRecord03=11
-
-# acme.entities.companyRecords.CompanyRecord{id=11, version=0}
-
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 02"
@@ -219,25 +162,11 @@ companyRecord03=11
 requests03=11
 
 # acme.entities.requestss.Requests{id=11, version=0}
-
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 11
 # 	- version: int = 0
-
-# 	from acme.entities.companyRecords.CompanyRecord:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Acme-Jobs"
-# 	- sector: java.lang.String = "Sector 3"
-# 	- ceo: java.lang.String = "CEO 3"
-# 	- description: java.lang.String = "Description 3"
-# 	- webSite: java.lang.String = "https://google.com/"
-# 	- phone: java.lang.String = "+999 (4387) 4576329871"
-# 	- email: java.lang.String = "antonioromerocaceres@gmail.com"
-# 	- isIncorporated: java.lang.Boolean = false
-# 	- numberStars: java.lang.Integer = 5
-
 # 	from acme.entities.requestss.Requests:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 03"
@@ -380,4 +309,64 @@ invRecord03=19
 # 	- sector: java.lang.String = "Harbory"
 # 	- invStatement: java.lang.String = "First time investing"
 # 	- stars: java.lang.Integer = null
+
+companyRecord01=20
+
+# acme.entities.companyRecords.CompanyRecord{id=20, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 20
+# 	- version: int = 0
+# 	from acme.entities.companyRecords.CompanyRecord:
+# 	- serialVersionUID: long = 1
+# 	- name: java.lang.String = "Solutia"
+# 	- sector: java.lang.String = "Sector 1"
+# 	- ceo: java.lang.String = "CEO 1"
+# 	- description: java.lang.String = "Description 1"
+# 	- webSite: java.lang.String = "https://gruposolutia.com/"
+# 	- phone: java.lang.String = "(9557) 922051"
+# 	- email: java.lang.String = "romangutierrez@hotmail.com"
+# 	- isIncorporated: java.lang.Boolean = false
+# 	- numberStars: java.lang.Integer = 0
+
+companyRecord02=21
+
+# acme.entities.companyRecords.CompanyRecord{id=21, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 21
+# 	- version: int = 0
+# 	from acme.entities.companyRecords.CompanyRecord:
+# 	- serialVersionUID: long = 1
+# 	- name: java.lang.String = "Alveys Chocolates"
+# 	- sector: java.lang.String = "Sector 2"
+# 	- ceo: java.lang.String = "CEO 2"
+# 	- description: java.lang.String = "Description 2"
+# 	- webSite: java.lang.String = "https://www.alveyschocolates.com/"
+# 	- phone: java.lang.String = "+34 (6035) 527401"
+# 	- email: java.lang.String = "antoniovidaldimision@gmail.com"
+# 	- isIncorporated: java.lang.Boolean = true
+# 	- numberStars: java.lang.Integer = 2
+
+companyRecord03=22
+
+# acme.entities.companyRecords.CompanyRecord{id=22, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 22
+# 	- version: int = 0
+# 	from acme.entities.companyRecords.CompanyRecord:
+# 	- serialVersionUID: long = 1
+# 	- name: java.lang.String = "Acme-Jobs"
+# 	- sector: java.lang.String = "Sector 3"
+# 	- ceo: java.lang.String = "CEO 3"
+# 	- description: java.lang.String = "Description 3"
+# 	- webSite: java.lang.String = "https://google.com/"
+# 	- phone: java.lang.String = "+999 (4387) 4576329871"
+# 	- email: java.lang.String = "antonioromerocaceres@gmail.com"
+# 	- isIncorporated: java.lang.Boolean = false
+# 	- numberStars: java.lang.Integer = 5
 
