--- a/src/main/resources/application-deployment.properties
+++ b/src/main/resources/application-deployment.properties
@@ -10,9 +10,9 @@
 
 # User-defined properties.  Please, change them to adapt the starter project to your needs. 
 
-spring.datasource.url							= jdbc:mysql://bnsq6l0qswdgbguzv5pv-mysql.services.clever-cloud.com:3306/bnsq6l0qswdgbguzv5pv
-spring.datasource.username						= udkvnhxlfstq1tzt
-spring.datasource.password						= 1ibCFQ9dWh28AqsRFok2
+spring.datasource.url							= jdbc:mysql://bqspuetdccwcwzr6oycj-mysql.services.clever-cloud.com:3306/bqspuetdccwcwzr6oycj
+spring.datasource.username						= uiw1dryvo8ycfxul
+spring.datasource.password						= hObami8SHrBtqcddWGOq
 
 spring.jpa.hibernate.show-sql					= true
 spring.jpa.hibernate.format-sql					= true
