--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$AzJMLHxbbl3l2rn4kF4rgebrFR0ew30lQlJ7ejiT8zuyxt2D4G5iK"
+# 	- password: java.lang.String = "$2a$05$FZfYIhkAMeJPMeMwYtPGKefZgAEwip6RBPsNnBIyU58701gnVGN/a"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$kcyki/Aw3IRwel2zLcACOenQ2o5f/1pdZw0VavpJNDXsIGZRAtIPa"
+# 	- password: java.lang.String = "$2a$05$eBaE1lASu1rJQ5pFLqndOuDanbU9AGi0nWYrJHMLCAv3Ah8eNUTg6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -125,15 +125,15 @@ announcement03=8
 # 	- moreInfo: java.lang.String = "http://ww.example.com"
 # 	- text: java.lang.String = "This is a very old announcement"
 
-requests01=9
+Solicit01=9
 
-# acme.entities.requestss.Requests{id=9, version=0}
+# acme.entities.solicits.Solicit{id=9, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 9
 # 	- version: int = 0
-# 	from acme.entities.requestss.Requests:
+# 	from acme.entities.solicits.Solicit:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 01"
 # 	- moment: java.util.Date = <<Mon Jun 10 10:35:00 CEST 2019>>
@@ -142,15 +142,15 @@ requests01=9
 # 	- reward: acme.framework.datatypes.Money = <<€ 9000.00>>
 # 	- ticker: java.lang.String = "RABCD-12345"
 
-requests02=10
+Solicit02=10
 
-# acme.entities.requestss.Requests{id=10, version=0}
+# acme.entities.solicits.Solicit{id=10, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 10
 # 	- version: int = 0
-# 	from acme.entities.requestss.Requests:
+# 	from acme.entities.solicits.Solicit:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 02"
 # 	- moment: java.util.Date = <<Tue Jul 10 10:35:00 CEST 2018>>
@@ -159,15 +159,15 @@ requests02=10
 # 	- reward: acme.framework.datatypes.Money = <<€ 2000.00>>
 # 	- ticker: java.lang.String = "RABCD-12346"
 
-requests03=11
+Solicit03=11
 
-# acme.entities.requestss.Requests{id=11, version=0}
+# acme.entities.solicits.Solicit{id=11, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 11
 # 	- version: int = 0
-# 	from acme.entities.requestss.Requests:
+# 	from acme.entities.solicits.Solicit:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Request 03"
 # 	- moment: java.util.Date = <<Tue Jan 15 10:35:00 CET 2019>>
